# keyple-service-cpp-lib

./: CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md
src/: CMakeLists.txt
src/main/: AbstractMonitoringJobAdapter.cpp  AbstractMonitoringJobAdapter.h  AbstractObservableLocalPluginAdapter.cpp  AbstractObservableLocalPluginAdapter.h  AbstractObservableStateAdapter.cpp  AbstractObservableStateAdapter.h  AbstractPluginAdapter.cpp  AbstractPluginAdapter.h  AbstractReaderAdapter.cpp  AbstractReaderAdapter.h  ApduRequestAdapter.h  ApduResponseAdapter.cpp  ApduResponseAdapter.h  AutonomousObservableLocalPluginAdapter.cpp  AutonomousObservableLocalPluginAdapter.h  CMakeLists.txt  CardInsertionActiveMonitoringJobAdapter.cpp  CardInsertionActiveMonitoringJobAdapter.h  CardInsertionPassiveMonitoringJobAdapter.cpp  CardInsertionPassiveMonitoringJobAdapter.h  CardRemovalActiveMonitoringJobAdapter.cpp  CardRemovalActiveMonitoringJobAdapter.h  CardRemovalPassiveMonitoringJobAdapter.cpp  CardRemovalPassiveMonitoringJobAdapter.h  CardResponseAdapter.cpp  CardResponseAdapter.h  CardSelectionManagerAdapter.cpp  CardSelectionManagerAdapter.h  CardSelectionResponseAdapter.cpp  CardSelectionResponseAdapter.h  CardSelectionResultAdapter.h  CardSelectionScenarioAdapter.cpp  CardSelectionScenarioAdapter.h  ConfigurableReader.h  KeyplePluginException.h  KeypleServiceExport.h  LocalConfigurableReaderAdapter.h  LocalPluginAdapter.cpp  LocalPluginAdapter.h  LocalPoolPluginAdapter.cpp  (+40 more)
src/main/cpp/: ExecutorService.cpp  ExecutorService.h  Future.cpp  Future.h  Job.cpp  Job.h  Runnable.h  Thread.h
src/main/spi/: PluginObservationExceptionHandlerSpi.h  PluginObserverSpi.h  PluginObserverSpi.h.h
src/test/: AbstractReaderAdapterTest.cpp  AutonomousObservableLocalPluginAdapterTest.cpp  CMakeLists.txt  CardSelectionResultAdapterTest.cpp  LocalPluginAdapterTest.cpp  LocalPoolPluginAdapterTest.cpp  LocalReaderAdapterTest.cpp  MainTest.cpp  ObservableLocalPluginAdapterTest.cpp  ObservableLocalReaderBlockingAdapterTest.cpp  SmartCardServiceAdapterTest.cpp
src/test/mock/: AbstractReaderAdapterMock.h  AutonomousObservablePluginSpiMock.h  CardExtensionMock.h  CardRequestSpiMock.h  ConfigurableReaderSpiMock.h  ObservableLocalPluginSpiMock.h  ObservablePluginSpiMock.h  ObservableReaderBlockingSpiMock.h  ObservableReaderSpiMock.h  PluginFactoryMock.h  PluginObservationExceptionHandlerMock.h  PluginObserverSpiMock.h  PluginSpiMock.h  PoolPluginFactoryMock.h  PoolPluginSpiMock.h  ReaderMock.h  ReaderSpiMock.h
src/test/util/: ReaderAdapterTestUtils.h
